syntax = "proto3";

package passager;

service passager{
	rpc SendRequest(RequestUser) returns (RequestResponse){}
	rpc GetRequestStatus(RequestFilter) returns (stream AcceptUser){}
	rpc ReceiveRequest(AcceptUser) returns (AcceptResponse){}
	rpc getLocation(RequestFilter) returns (stream RequestLocation){}
	rpc ReceiveLocation(RequestLocation) returns (ResponseLocation){}
}
message RequestResponse{
	string From = 1;
	bool success = 2;
}

message RequestUser{
	string From = 1;
	float Lat = 2;
	float Lon = 3;
	string status = 4;
}

message RequestFilter{
  string UserKey = 1;
}

message AcceptUser{
	string From = 1;
	string To = 2;
	float Lat = 3;
	float Lon = 4;
}

message AcceptResponse{
	string From = 1;
	bool success = 2;
}

message RequestLocation{
	string From = 1;
	string To = 2;
	float Lat = 3;
	float Lon = 4;
}

message ResponseLocation{
	string From = 1;
	bool success = 2;
}

